# Light-Monitoring_GUI

./: CMakeLists.txt  Drawer_Custom.qml  Header_GUI.qml  Main.qml  Node_GUI.qml  Socket_GUI.qml  backend.cpp  backend.h  main.cpp  uet_logo.rc
